# circle_mcp

./: token_transfer_approval.html
circle_mcp_server/: README.md  env.example  pyproject.toml  pytest.ini  server.py  test_server.py
circle_transaction_server/: .gitignore  fly.toml  main.py  pyproject.toml
circle_transaction_server/static/: token_transfer_approval.html
